<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <plurals name="num_scrobbles_noti">
        <item quantity="one">%1$s scrobble</item>
        <item quantity="other">%1$s scrobbles</item>
    </plurals>
    <plurals name="num_scrobbles_today"
        comment="n (scrobbles) today">
        <item quantity="other">%1$s today</item>
    </plurals>
    <plurals name="num_listeners">
        <item quantity="one">%1$s listener</item>
        <item quantity="other">%1$s listeners</item>
    </plurals>
    <plurals name="num_days">
        <item quantity="one">%1$s day</item>
        <item quantity="other">%1$s days</item>
    </plurals>
    <plurals name="num_weeks">
        <item quantity="one">%1$s week</item>
        <item quantity="other">%1$s weeks</item>
    </plurals>
    <plurals name="num_months">
        <item quantity="one">%1$s month</item>
        <item quantity="other">%1$s months</item>
    </plurals>
    <plurals name="num_years">
        <item quantity="one">%1$s year</item>
        <item quantity="other">%1$s years</item>
    </plurals>
    <plurals name="num_artists">
        <item quantity="one">%1$s artist</item>
        <item quantity="other">%1$s artists</item>
    </plurals>
    <plurals name="num_albums">
        <item quantity="one">%1$s album</item>
        <item quantity="other">%1$s albums</item>
    </plurals>
    <plurals name="num_tracks">
        <item quantity="one">%1$s track</item>
        <item quantity="other">%1$s tracks</item>
    </plurals>
    <plurals name="num_matches"
        comment="regex pattern matches"
        >
        <item quantity="one">%1$d match</item>
        <item quantity="other">%1$d matches</item>
    </plurals>
    <plurals name="num_simple_edits">
        <item quantity="one">%1$s edit</item>
        <item quantity="other">%1$s edits</item>
    </plurals>
    <plurals name="num_regex_edits">
        <item quantity="one">%1$s pattern edit</item>
        <item quantity="other">%1$s pattern edits</item>
    </plurals>
    <plurals name="num_blocked_metadata">
        <item quantity="other">%1$s blocked metadata</item>
    </plurals>
    <plurals name="num_minutes">
        <item quantity="one">%1$d minute</item>
        <item quantity="other">%1$d minutes</item>
    </plurals>
    <plurals name="num_pending"
        comment="Used for pending loves, pending scrobbles"
        >
        <item quantity="other">%1$s pending</item>
    </plurals>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="reset">Reset</string>
    <string name="settings">Configure</string>
    <string name="bug_report">Bug report</string>
    <string name="faq">FAQ</string>
    <string name="album_art">Album art</string>
    <string name="artist_image">Artist image</string>
    <string name="parse_error"
        comment="Title parsing error for Youtube etc"
        >Couldn\'t parse title</string>
    <string name="network_error">Network error</string>
    <string name="disable_tls_verify">Ignore TLS errors</string>
    <string name="scrobble_ignored"
        comment="Will be prefixed by Lastfm: (e.g. Lastfm: Scrobble ignored)"
        >Scrobble ignored</string>
    <string name="scrobble_ignored_save_edit">Lastfm ignored the edit probably because the scrobble is too old. Would you like to save this edit for future scrobbles instead?</string>
    <string name="required_fields_empty"
        comment="Shown on filling a form"
        >Required fields are empty</string>
    <string name="artist">Artist</string>
    <string name="artists">Artists</string>
    <string name="top_artists"
        comment="Top artists the user has listened to"
        >Top artists</string>
    <string name="album_artist">Album artist</string>
    <string name="artist_channel"
        comment="Artist or youtube channel"
        >Artist / channel</string>
    <string name="similar_artists">Similar artists</string>
    <string name="album_optional">Album (optional)</string>
    <string name="album">Album</string>
    <string name="albums">Albums</string>
    <string name="top_albums"
        comment="top albums the user has listened to, or most scrobbled albums of an artist"
        >Top albums</string>
    <string name="track">Track</string>
    <string name="tracks">Tracks</string>
    <string name="top_tracks"
        comment="top tracks the user has listened to, or most scrobbled tracks of an artist"
        >Top tracks</string>
    <string name="similar_tracks">Similar tracks</string>
    <string name="similar"
        comment="Similar tracks but in short"
        >Similar</string>
    <string name="state_scrobbling">Now scrobbling…</string>
    <string name="state_scrobbled">Scrobbled</string>
    <string name="unscrobble">Unscrobble</string>
    <string name="state_unscrobbled">Unscrobbled</string>
    <string name="state_unrecognised_artist">Unrecognised artist</string>
    <string name="tap_to_edit">(Tap to edit)</string>
    <string name="recently_scrobbled">Recently Scrobbled</string>
    <string name="recents"
        comment="Short for recently scrobbled"
        >Recents</string>
    <string name="first_scrobbled_on" formatted="true"
        comment="%1= date"
        >First scrobbled on %1$s</string>
    <string name="auto"
        comment="automatic or default setting"
        >Auto</string>
    <string name="almost_there"
        comment="Shown on the first screen after install, asking the user to complete the setup"
        >Almost there…</string>
    <string name="music_players">Music Players</string>
    <string name="other_apps"
        comment="Apps which are not music players or video streaming apps"
        >Other Apps</string>
    <string name="choose_apps">Choose apps</string>
    <string name="choose_an_app">Choose an app</string>
    <string name="apps"
        comment="Currently appears on the regex edit dialog showing the selected apps and allowing the user to add more apps"
        >Apps</string>
    <string name="offline">Offline. Data shown isn\'t fresh</string>
    <string name="unavailable_offline">Not available when offline</string>
    <string name="tv_url_notice">Open this URL in a browser on another device</string>
    <string name="scrobble_services"
        comment="Services like lastfm, librefm, listenbrainz etc"
        >Services</string>
    <string name="recents_share" formatted="true"
        comment="%1= artist — track, %2= relative time (with preposition e.g. on Sep 9)"
        >I was listening to\n%1$s %2$s</string>
    <string name="recents_share_username" formatted="true"
        comment="%1= artist — track, %2= relative time (with preposition e.g. on Sep 9), %3= username"
        >%3$s was listening to\n%1$s %2$s</string>
    <string name="share_sig">(via Pano Scrobbler)</string>
    <string name="share">Share</string>
    <string name="legend"
        comment="Chart legend - descriptions of the symbols used"
        >Legend</string>
    <string name="grid_size">Change grid size</string>
    <string name="pinch_to_zoom">Pinch to zoom</string>
    <string name="more_info">More info</string>
    <string name="more"
        comment="More options menu in short"
        >More</string>
    <string name="learn"
        comment="(Learn java regex syntax)"
        >Learn</string>
    <string name="hide">Hide</string>
    <string name="rank_change"
        comment="%1= delta change"
        >Rank change: %s</string>
    <string name="rank_change_no_change">No change</string>
    <string name="rank_change_new">Not scrobbled within the previous period</string>
    <string name="search">Search</string>
    <string name="clear_all_history"
        comment="(talking about search history, tag history)"
        >Clear all history</string>
    <string name="clear_history_specific"
        comment="(talking about search history, tag history)"
        >Remove this item from the history?</string>
    <string name="library"
        comment="search within the library"
        >Library</string>
    <string name="global"
        comment="search globally across lastfm"
        >Global</string>
    <string name="reindex">Quick index</string>
    <string name="do_index"
        comment="downloads the top scrobbles and indexes them into a database"
        >Index your scrobbles</string>
    <string name="full_index">Full index</string>
    <string name="take_long_time">This can take a long time</string>
    <string name="full_index_desc">Use this only if you have edited or deleted scrobbles from the website.</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="love"
        comment="Love/like a song"
        >Love</string>
    <string name="hate"
        comment="Hate or dislike a song"
        >Hate</string>
    <string name="loved"
        comment="Its a noun"
        >Loved</string>
    <string name="charts"
        comment="User\'s top artists, albums, tracks, line chart of daily scrobble counts and tag cloud"
        >Charts</string>
    <string name="scrobble_from_mic"
        comment="Its a verb"
        >Scrobble from mic</string>
    <string name="details">Details</string>
    <string name="scrobbles">Scrobbles</string>
    <string name="random"
        comment="Displays a random scrobble or a loved track of the user"
        >I\'m feeling lucky</string>
    <string name="loved_track">Loved track</string>
    <string name="edit_name"
        comment="name for regex pattern"
        >Friendly name</string>
    <string name="edit_regex">Regex pattern</string>
    <string name="edit_regex_replacement">Regex replacement</string>
    <string name="edit_field"
        comment="Fields like artist/album/track etc"
        >Fields</string>
    <string name="edit_replace">Replace</string>
    <string name="edit_first"
        comment="First occurrence of a pattern"
        >First</string>
    <string name="edit_all"
        comment="All occurrences of a pattern"
        >All</string>
    <string name="edit_extract"
        comment="To extract sub text from a larger text, in short, used in pattern edits"
        >Extract</string>
    <string name="edit_extract_desc"
        comment="Do not translate artist, albumArtist, album, track, because the user has to enter them as it is. https://www.google.com/search?q=regex+named+capture+groups"
        >Name your capture groups <i>track, album, artist</i> or <i>albumArtist</i> to extract them from other fields</string>
    <string name="edit_extract_example"
        comment="Do not translate artist, albumArtist, album, track, because the user has to enter them as it is. https://www.google.com/search?q=regex+named+capture+groups"
        >e.g. To swap the artist and title, you would put the artist regex as (?&lt;track&gt;.*) and the track regex as (?&lt;artist&gt;.*)</string>
    <string name="edit_continue">If found, continue matching other regexes</string>
    <string name="edit_case_sensitive">Case sensitive</string>
    <string name="blocked_metadata_info">ℹ️ Filling in more than one of these fields will apply an AND operator between them</string>
    <string name="player_actions"
        comment="music player actions such as skip/mute"
        >Player actions</string>
    <string name="skip"
        comment="skip to next track"
        >Skip</string>
    <string name="mute"
        comment="mute the music"
        >Mute</string>
    <string name="block"
        comment="block the track from scrobbling"
        >Block</string>
    <string name="use_channel"
        comment="(Use youtube channel name)"
        >Use channel name</string>
    <string name="add"
        comment="Add a new item such as an edit, a tag, etc"
        >Add</string>
    <string name="get_pro">Support this app</string>
</resources>