<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      tools:showIn="navigation_view">
<!-- group needs an id to be set for the separator to show up -->
    <group android:id="@+id/nav_group_1">
        <item
            app:actionLayout="@layout/action_external"
            android:id="@+id/nav_last_week"
            android:icon="@drawable/vd_week"
            android:title="@string/last_week"/>
    </group>

    <group android:id="@+id/nav_group_2">
        <item
            android:id="@+id/nav_recents"
            android:icon="@drawable/vd_history"
            android:title="@string/scrobbles"/>
        <item
            android:id="@+id/nav_loved"
            android:icon="@drawable/vd_heart"
            android:title="@string/loved"/>
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/vd_friends"
            android:title="@string/friends"/>
        <item
            android:id="@+id/nav_charts"
            android:icon="@drawable/vd_charts"
            android:title="@string/charts"/>
    </group>

    <group android:id="@+id/nav_group_3">
        <item
            android:id="@+id/nav_random"
            android:icon="@drawable/vd_die"
            android:title="@string/random"/>
        <item
            android:id="@+id/nav_rec"
            android:icon="@drawable/vd_mic"
            android:title="@string/scrobble_from_mic"/>
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/vd_search"
            android:title="@string/search"/>
    </group>
    <group android:id="@+id/nav_group_4">
        <item
            android:id="@+id/nav_pro"
            android:icon="@drawable/vd_medal"
            android:title="@string/get_pro"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/vd_settings"
            android:title="@string/settings"/>
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/vd_bug"
            android:title="@string/bug_report"/>
    </group>

</menu>
