<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="24dp"
        android:paddingHorizontal="24dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginVertical="@dimen/text_input_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginVertical="@dimen/text_input_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_regex">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_pattern"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginVertical="@dimen/text_input_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_regex_replacement">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_replacement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="?textInputOutlinedExposedDropdownMenuStyle"
            android:layout_marginVertical="@dimen/text_input_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_field">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/edit_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_replace" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/edit_replace_first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/edit_first" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/edit_replace_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_all" />
        </RadioGroup>

        <CheckBox
            android:id="@+id/edit_case_sensitive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_case_sensitive" />

        <CheckBox
            android:id="@+id/edit_continue_matching"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_continue" />

    </LinearLayout>
</ScrollView>