<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:id="@+id/homepager_menu">
        <item
            android:id="@+id/nav_recents"
            android:icon="@drawable/vd_history"
            android:title="@string/scrobbles"/>
        <item
            android:id="@+id/nav_loved"
            android:icon="@drawable/vd_heart"
            android:title="@string/loved"/>
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/vd_friends"
            android:title="@string/friends"/>
        <item
            android:id="@+id/nav_charts"
            android:icon="@drawable/vd_charts"
            android:title="@string/charts"/>
    </group>

</menu>
