<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_extract_track_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/text_input_margin_vertical"
        tools:hint="@string/track">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_extract_track"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_extract_album_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/text_input_margin_vertical"
        tools:hint="@string/album">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_extract_album"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_extract_artist_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/text_input_margin_vertical"
        tools:hint="@string/artist">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_extract_artist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_extract_album_artist_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/text_input_margin_vertical"
        tools:hint="@string/album_artist">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_extract_album_artist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/edit_extract_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/text_input_margin_vertical"
        android:justificationMode="inter_word"
        android:text="@string/edit_extract_desc" />

    <TextView
        android:id="@+id/edit_extract_example"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/text_input_margin_vertical"
        android:justificationMode="inter_word"
        android:text="@string/edit_extract_example" />

</LinearLayout>