<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:transitionGroup="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/dialog_padding"
        android:paddingTop="@dimen/dialog_padding">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/text_input_margin_vertical"
            android:hint="@string/edit_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <include
            android:id="@+id/edit_replace_include"
            layout="@layout/layout_regex_edit_add_replace"
            android:visibility="gone"
            tools:visibility="visible" />

        <include
            android:id="@+id/edit_extract_include"
            layout="@layout/layout_regex_edit_add_extractions"
            android:visibility="gone"
            tools:visibility="visible" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/text_input_margin_vertical"
            android:text="@string/apps" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/edit_packages_chipgroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/edit_packages_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_all"
                app:chipIconTint="?colorPrimary"
                app:chipIconVisible="true" />

            <com.google.android.material.chip.Chip
                android:id="@+id/edit_packages_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                app:chipIcon="@drawable/vd_add_borderless"
                app:chipIconTint="?colorPrimary"
                app:chipIconVisible="true" />
        </com.google.android.material.chip.ChipGroup>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/edit_replace_chipgroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:checkedChip="@id/edit_replace_first"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/edit_replace_first"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_first" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/edit_replace_all"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_all" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/edit_extract"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_extract" />
            </com.google.android.material.chip.ChipGroup>
        </HorizontalScrollView>

        <CheckBox
            android:id="@+id/edit_case_sensitive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_case_sensitive" />

        <CheckBox
            android:id="@+id/edit_continue_matching"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_continue" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/edit_delete"
            style="?materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/delete"
            android:visibility="gone"
            app:icon="@drawable/vd_delete"
            tools:visibility="visible" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>