<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="@dimen/dialog_padding"
    android:paddingHorizontal="8dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            layout="@layout/text_input_edit"
            android:id="@+id/block_track" />

        <include
            layout="@layout/text_input_edit"
            android:id="@+id/block_album" />

        <include
            layout="@layout/text_input_edit"
            android:id="@+id/block_artist" />

        <CheckBox
            android:id="@+id/use_channel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/use_channel"
            android:visibility="gone"
            android:layout_marginHorizontal="16dp"
            tools:visibility="visible" />

        <include
            layout="@layout/text_input_edit"
            android:id="@+id/block_album_artist" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_actions"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="16dp" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/player_actions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:singleSelection="true"
            app:singleLine="true"
            android:layout_marginHorizontal="16dp">

            <com.google.android.material.chip.Chip
                style="@style/Widget.Material3.Chip.Filter"
                android:id="@+id/skip"
                android:checked="true"
                android:text="@string/skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.chip.Chip
                style="@style/Widget.Material3.Chip.Filter"
                android:id="@+id/mute"
                android:text="@string/mute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingHorizontal="16dp"
            android:text="@string/blocked_metadata_info" />
    </LinearLayout>
</ScrollView>
